# anagramsolver

./: LICENSE  pyproject.toml
anagramsolver/: __init__.py  dictionary.py
tests/: test_dictionary.py
