[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "anagramsolver"
description = "Python anagram solver"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["anagram"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "anagramsolver.__VERSION__"}

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2, <8.0.0",
    "pytest-timeout>=2.1.0, <3.0.0",
    "black>=22.6.0, <23.0.0",
]
